tests/cases/lambdas/errors/err_filter_named_not_bool.aipl
import { *, filter, print, to_str } from builtins;

// A named function passed to `filter` must return bool.
fn twice(x: i64) -> i64 { x * 2 }

fn main() !prints {
    let xs = [1, 2, 3];
    print(to_str(xs.filter(twice)));
}
--- errors ---
error: fn "twice" returns i64, but bool is expected here
 --> ./tests/cases/lambdas/errors/err_filter_named_not_bool.aipl:8:28
  |
8 |     print(to_str(xs.filter(twice)));
  |                            ^^^^^
